<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:weightSum="6">
        <LinearLayout
            android:id="@+id/leftLinearLayout"
            android:layout_weight="4"
            android:weightSum="15"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:background="@drawable/background">
            <ImageButton
                android:id="@+id/previous_puzzle_button"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"

                app:srcCompat="@android:drawable/arrow_down_float" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="5">
                <TextView
                    android:id="@+id/puzzle_text"
                    android:text="@string/puzzle_string"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/puzzle_number_text"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>
            </LinearLayout>
            <ImageButton
                android:id="@+id/next_puzzle_button"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                app:srcCompat="@android:drawable/arrow_up_float" />
        </LinearLayout>
        <GridLayout
            android:id="@+id/rightGridLayout"
            android:layout_weight="2"
            android:columnCount="3"
            android:rowCount="2"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_weight="1"
            android:background="@drawable/background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">
            <TextView
                android:id="@+id/moves_text"
                android:text="@string/moves_string"
                android:textSize="20sp"
                android:layout_gravity="start|top"
                android:layout_width="wrap_content"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/number_moves_text"
                android:text="@string/zero_string"
                android:textSize="20sp"
                android:layout_columnSpan="2"
                android:layout_gravity="start|top"
                android:layout_width="wrap_content"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/record_text"
                android:text="@string/record_string"
                android:textSize="20sp"
                android:layout_gravity="start|top"
                android:layout_width="wrap_content"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/record_number_text"
                android:text="@string/unknown_record_string"
                android:textSize="20sp"
                android:layout_gravity="start|top"
                android:layout_width="wrap_content"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/record_minimum_text"
                android:text="@string/record_puzzle1_string"
                android:textSize="20sp"
                android:layout_gravity="start|top"
                android:layout_width="wrap_content"
                android:textColor="@color/black"/>
        </GridLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/pause_button"
        android:layout_width="84dp"
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@android:drawable/ic_media_pause" />
    <ImageButton
        android:id="@+id/refresh_button"
        android:layout_width="86dp"
        android:layout_height="68dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@android:drawable/ic_menu_rotate" />
    <ImageButton
        android:id="@+id/undo_button"
        android:layout_width="92dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <com.example.frlafg.tp1.views.GameView
        android:id="@+id/gameView"
        android:layout_width="386dp"
        android:layout_height="409dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/undo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLinearLayout"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/exit_rectangle"
        android:layout_width="20dp"
        android:layout_height="70dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/gameView"
        app:layout_constraintLeft_toRightOf="@id/gameView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/gameView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.4"/>

</android.support.constraint.ConstraintLayout>